--- a/src/app/spotbie/map/map.component.html
+++ b/src/app/spotbie/map/map.component.html
@@ -445,7 +445,7 @@
     
         <app-bottom-ad-banner class='mt-4' #bottomAdBanner [categories]="number_categories" [lat]="lat" [lng]="lng"></app-bottom-ad-banner>
 
-        <div class='mt-2 mb-5'>
+        <div class='mt-5 pb-5'>
     
           <span class='sb-page-button text-uppercase cursor-pointer' (click)="goToPage(1)" *ngIf="allPages > 1">
             <i class="fa fa-angle-double-left"></i>
