--- a/src/app/spotbie/spotbie-logged-in/reward-menu/reward/reward.component.css
+++ b/src/app/spotbie/spotbie-logged-in/reward-menu/reward/reward.component.css
@@ -105,6 +105,7 @@ h6.sb-titleGreen {
     min-height: 30vw;
     background-size: cover !important;
     background-position: center !important;
+    border-radius: 25px; 
 }
 
 .spotbie-share-post-link {
