--- a/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.html
+++ b/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.html
@@ -147,7 +147,7 @@
                 spotbie-text-link"
                 *ngIf="business"
                 (click)="usersHome()">
-        CLICK HERE FOR NON-BUSINESS USERS
+          <i class="fas fa-user"></i>  CLICK HERE FOR NON-BUSINESS USERS
     </div>
 
     <div class="spotbie-rel-div
@@ -155,7 +155,7 @@
                 spotbie-text-link"
                 *ngIf="!business"
                 (click)="businessHome()">
-        LOOKING FOR THE BUSINESS PORTAL?
+          <i class="fas fa-business-time"></i> LOOKING FOR THE BUSINESS PORTAL?
     </div>
 
     <div></div>
