--- a/src/app/spotbie/spotbie-logged-out/sign-up/sign-up.component.html
+++ b/src/app/spotbie/spotbie-logged-out/sign-up/sign-up.component.html
@@ -173,7 +173,9 @@
                     spotbie-text-link"
             *ngIf="business"
             (click)="usersHome()">
-            CLICK HERE FOR NON-BUSINESS USERS
+
+            <i class="fas fa-user"></i>  CLICK HERE FOR NON-BUSINESS USERS
+            
         </div>
 
         <div class="spotbie-rel-div
@@ -181,7 +183,9 @@
                     spotbie-text-link"
             *ngIf="!business"
             (click)="businessHome()">
-            LOOKING FOR THE BUSINESS PORTAL?
+            
+            <i class="fas fa-business-time"></i> LOOKING FOR THE BUSINESS PORTAL?
+
         </div>
 
         <button class="btn spotbie-button sb-fb-logIn-btn spotbie-padding text-uppercase" (click)="signInWithFB()">
