--- a/src/app/spotbie/spotbie-logged-in/ad-manager-menu/ad-manager-menu.component.html
+++ b/src/app/spotbie/spotbie-logged-in/ad-manager-menu/ad-manager-menu.component.html
@@ -11,7 +11,7 @@
     <div class='sb-menuAdWrapper'>
     
         <div class='sb-menuAd' 
-                *ngFor="let ad of ads"
+                *ngFor="let ad of adList"
                 [ngStyle]="adTileStyling(ad)"
                 (click)="openAd(ad)">
             
@@ -20,7 +20,7 @@
         </div>            
 
         <div class='spotbie-button text-uppercase mt-5'
-                *ngIf="ads !== null && ads.length < 0"
+                *ngIf="adList.length < 3"
                 (click)="addAd()">
             CREATE AD
         </div>
