--- a/src/app/spotbie/spotbie-logged-in/ad-manager-menu/ad-manager-menu.component.css
+++ b/src/app/spotbie/spotbie-logged-in/ad-manager-menu/ad-manager-menu.component.css
@@ -8,7 +8,7 @@
     width: 900px;
     max-width: 900px;
     display: block;
-    text-align: left;  
+    text-align: center;  
 }
 .sb-addMenuItem{
     position: relative;
