--- a/src/app/spotbie/map/info-object/info-object.component.css
+++ b/src/app/spotbie/map/info-object/info-object.component.css
@@ -127,7 +127,6 @@
     width: 100%;
     min-width: 100%;
     max-width: 100%; 
-
     z-index: -1;       
 }
 .spotbie-info-object-image.communityMember{
@@ -371,9 +370,10 @@ h6.sb-titleGreen{
     .spotbie-info-object-image-thumb{
         margin-left: unset;
         margin-right: unset;
-        width: 100%;
-        min-width: 100%;
-        max-width: 100%;
+        width: 96%;
+        min-width: 96%;
+        max-width: 96%;
+        border-radius: 9px;
         height: 60vw;
         min-height: 60vw;
         background-size: cover!important;
