--- a/src/app/spotbie/spotbie-logged-in/reward-menu/reward/reward.component.css
+++ b/src/app/spotbie/spotbie-logged-in/reward-menu/reward/reward.component.css
@@ -1,7 +1,11 @@
 .spotbie-overlay-window {
     padding-bottom: 0px;
     padding-top: 70px;
-    background-color: rgb(16, 16, 16);
+    background-color: rgb(16, 16, 16) !important;
+    background: url(src/assets/images/home_imgs/spotbie-white-icon.svg);
+    background-size: cover !important;
+    background-position: center !important;
+    background-repeat: no-repeat !important;    
     padding-bottom: 100px;
     z-index: 99 !important;
 }
