--- a/src/app/spotbie/ads/single-ad/single-ad.component.css
+++ b/src/app/spotbie/ads/single-ad/single-ad.component.css
@@ -1,18 +1,15 @@
 .spotbie-ad-wrapper-header{
-    position: absolute;
-    top: 0;
-    right: 5%;
+    position: relative;
     text-align: center;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    min-height: 274px;
-    background-repeat: no-repeat !important;
-    background-size: contain !important;
-    background-position: center !important;
-    max-width: 63%;
-    min-width: 63%;
-    width: 63%;
-    background-color: rgb(28 25 36) !important;
+    margin: 5px auto;
+    min-height: 500px;
+    background-repeat: no-repeat!important;
+    background-size: contain!important;
+    background-position: center!important;
+    max-width: 1600px;
+    min-width: 100%;
+    width: 100%;
+    background-color: #1c1924!important;
     cursor: pointer;
     z-index: 9;
 }
@@ -26,14 +23,21 @@
     position: absolute;
     top: 41px;
     right: 14px;
-    font-size: .5rem;
+    font-size: .9rem;
 }
 
 .sb-totalRewards{
     position: absolute;
-    top: 65px;
+    top: 70px;
     right: 14px;
     font-size: .8rem;
+}
+
+.sb-perDollarTopAd{
+    position: absolute;
+    top: 120px;
+    right: 14px;
+    font-size: 1rem;
 }
 
 .sb-perDollar{
@@ -44,21 +48,25 @@
 }
 .sb-distanceMiles{
     position: absolute;
-    bottom: 65px;
+    bottom: 42px;
     right: 14px;
     font-size: .8rem;
 }
 .sb-address {
     position: absolute;
-    bottom: 41px;
+    bottom: 14px;
     right: 14px;
-    font-size: .5rem;
+    font-size: .8rem;
 }
 .sb-categoryList{
     position: absolute;
-    bottom: 10px;
+    display: block;
+    bottom: 230px;
     right: 14px;
-    font-size: .5rem;
+    font-size: .6rem;
+    max-width: 250px;
+    text-align: left;
+    word-break: break-all;
 }
 .fa-map-marker-alt{
     font-size: .5rem;
@@ -71,9 +79,9 @@
     min-height: 100%;
     height: 100%;
     max-height: 100%;
-    max-width: 74%;
+    max-width: 85%;
     background-repeat: no-repeat!important;
-    background-size: 100%!important;
+    background-size: cover!important;
     background-position: center!important; 
 }
 .spotbie-white-iconImg{
@@ -92,23 +100,20 @@
     z-index: 0;
     pointer-events: none;   
 }
+
 .sb-ad-top{
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 2;
 }
 .sb-ad-bottom{
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
-}
-.sb-perDollarTopAd{
-    position: absolute;
-    top: 120px;
-    right: 14px;
-    font-size: 1rem;
+    z-index: 2;
 }
 
 @media (max-width: 1100px) { 
@@ -126,7 +131,9 @@
         max-width: 100%;
         min-width: 100%;
         width: 100%;
-        right: 0%;        
+        right: 0%;
+        min-height: unset;
+        height: unset;        
     }
     .spotbie-ad-image{
         position: relative;
@@ -136,6 +143,7 @@
         height: 250px;
         max-height: 100%;
         max-width: 100%;
+        box-shadow: unset;   
     } 
     .sb-sponsored,
     .sb-sponsoredName,
