--- a/src/app/spotbie/map/map.component.html
+++ b/src/app/spotbie/map/map.component.html
@@ -116,7 +116,7 @@
                         [longitude]="communityMember.loc_y">
 
             
-            <div class='spotbie-marker-bg sb-communityMember'
+            <div class='spotbie-marker-bg sb-communityMember pulse'
                 (click)="pullSearchMarker(communityMember)"
                 [ngStyle]="{ 'background' : 'url(' + communityMember.photo + ')' }">
                 <img src="assets/images/home_imgs/spotbie-green-icon.svg" />
