--- a/src/app/spotbie/spotbie-logged-in/ad-manager-menu/ad-creator/ad-creator.component.html
+++ b/src/app/spotbie/spotbie-logged-in/ad-manager-menu/ad-creator/ad-creator.component.html
@@ -180,7 +180,7 @@
             <i class="fa fa-check"></i>
         </div>
 
-        <h4 class="spotbie-text-gradient spotbie-r-success-title text-uppercase">AD IS LIVE</h4>
+        <h4 class="spotbie-text-gradient spotbie-r-success-title text-uppercase">PAYMENT PENDING</h4>
 
     </div>
 
