--- a/src/app/spotbie/spotbie-logged-in/redeemable/redeemable.component.html
+++ b/src/app/spotbie/spotbie-logged-in/redeemable/redeemable.component.html
@@ -72,11 +72,10 @@
             <i class="fas fa-exclamation-triangle"></i>
             <br/><br/>
             <p class="spotbie-text-gradient">
-                You have no redemeed points.<br/><br/>
-                Find places to eat, events, and retail stores through our map and start redeeming LP points.
+                You have no redemeed points.
             </p>    
-
-            <div class='spotbie-text-gradient mt-3 cursor-pointer' (click)="closeWindow()">
+            <br/><br/>
+            <div class='spotbie-text-gradient mt-4 cursor-pointer' (click)="closeWindow()">
                 CLOSE
             </div>
 
