--- a/src/app/spotbie/spotbie-logged-out/forgot-password/forgot-password.component.css
+++ b/src/app/spotbie/spotbie-logged-out/forgot-password/forgot-password.component.css
@@ -1,8 +1,13 @@
 .spotbie-overlay-window{ 
-    z-index: 99;
-    background-color: #32303e;
+    background: url('../../../../assets/images/home_imgs/jpg/spotbie-login-background.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center; 
+    background-color: #32303e;   
+    z-index: 99 !important;
 }
 .sb-closeButton{
+    top: 0px;
     z-index: 99;
 }
 .spotbie-paragraph{
@@ -12,7 +17,7 @@
     position: absolute;
     left: 0;
     right: 0;
-    top: 50%;
+    top: 40%;
     transform: translateY(-50%);
 }
 
@@ -27,8 +32,6 @@
     width: 400px;
     min-width: 400px;
     max-width: 400px;
-    margin-top: 20px;
-    margin-bottom: 20px;
 }
 .spotbie-button{
     width: 350px;
@@ -49,13 +52,7 @@
 .spotbie-invalid-feedback {
     margin-bottom: 30px;
 }
-.spotbie-forgot-pass-app{
-    position: relative;
-    margin: 0 auto;
-    width: 600px;
-    min-width: 600px;
-    max-width: 600px;
-}
+
 /**WIDTH MEDIA QUERIES */
 @media (max-width: 1300px) { 
 
@@ -68,7 +65,11 @@
 @media (max-width: 900px) { 
 }
 @media (max-width: 768px) { 
-
+    .sb-input{
+        width: 100%;
+        min-width: 100%;
+        max-width: 100%;        
+    }      
 }
 @media (max-width: 700px) { 
 
@@ -76,12 +77,10 @@
 @media (max-width: 600px) { 
 
 }
-@media (max-width: 560px) {
-    .spotbie-forgot-pass-app{
-        width: 100%;
-        min-width: 100%;
-        max-width: 100%;
-    }     
+@media (max-width: 560px) { 
+    h2{
+        font-size: 1.2rem;
+    } 
     .spotbie-invalid-feedback{
         margin-top: 20px;
         margin-bottom: 20px;
@@ -106,15 +105,12 @@
         margin-bottom: 20px;
         margin-top: 20px;
         text-align: center;
-        width: 85%;
-        min-width: 85%;
-        max-width: 85%;
+        width: 95%;
+        min-width: 95%;
+        max-width: 95%;
+        font-size: 1rem;
     }
-    .sb-input{
-        width: 75%;
-        min-width: 75%;
-        max-width: 75%;        
-    }    
+  
 }
 @media (max-width: 460px) { 
               
@@ -125,9 +121,6 @@
 @media (max-width: 360px) {  
     .spotbie-contact-me-info{
         font-size: 16px;           
-    }
-    .spotbie-forgot-pass-app{
-        padding-bottom: 75px; 
     }
 }
 
