--- a/src/app/spotbie/features/business-features/business-features.component.html
+++ b/src/app/spotbie/features/business-features/business-features.component.html
@@ -18,13 +18,16 @@
 
 <div class="sb-homePageIconsTable mt-4 mb-4">
     <div (click)="spawnCategories('food')">
-        <img src="assets/images/home_imgs/find-places-to-eat.svg" />
+        <img src="assets/images/home_imgs/find-places-to-eat.svg" /><br/>
+        <span class='spotbie-text-gradient'>FOOD</span>
     </div>
     <div (click)="spawnCategories('events')">
-        <img src="assets/images/home_imgs/find-events.svg" />
+        <img src="assets/images/home_imgs/find-events.svg" /><br/>
+        <span class='spotbie-text-gradient'>EVENTS</span>
     </div>        
     <div (click)="spawnCategories('shopping')">
-        <img src="assets/images/home_imgs/find-places-for-shopping.svg" />
+        <img src="assets/images/home_imgs/find-places-for-shopping.svg" /><br/>
+        <span class='spotbie-text-gradient'>RETAIL</span>
     </div>                        
 </div>
 
