--- a/src/app/spotbie/map/map.component.css
+++ b/src/app/spotbie/map/map.component.css
@@ -599,8 +599,42 @@ span.spotbie-button{
     height: 45px;
     width: 45px;
     min-width: 45px;
-    border: 2px solid #1c1924;
+    border: 2px solid #ff7220;
 }
+
+.pulse {
+    overflow: visible;
+    position: relative;
+}
+.pulse:before {
+    content: '';
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: inherit;
+    border-radius: inherit;
+    transition: opacity .3s, transform .3s;
+    animation: pulse-animation 1s cubic-bezier(0.24, 0, 0.38, 1) infinite;
+    z-index: -1;
+}
+@keyframes pulse-animation {
+    0% {
+        opacity: 1;
+        transform: scale(1);
+    }
+    50% {
+        opacity: 0;
+        transform: scale(1.5);
+    }
+    100% {
+        opacity: 0;
+        transform: scale(1.5);
+    }
+}
+
 .sb-communityMember img{
     position: absolute;
     top: -2px;
