--- a/src/app/spotbie/spotbie-logged-out/forgot-password/forgot-password.component.html
+++ b/src/app/spotbie/spotbie-logged-out/forgot-password/forgot-password.component.html
@@ -9,33 +9,26 @@
     <h2 class="spotbie-text-gradient text-uppercase">
       Password Recovery
     </h2>
-    
-    <p class="spotbie-el-100
-              spotbie-rel-div
-              spotbie-paragraph">
-    
-      Forgot your SpotBie password? Enter your e-mail or phone number below.
-      We will send you a reset pin which you will enter to reset your password.
-    
-    </p>  
+
+    <div class="mt-3"></div>
 
     <form [formGroup]="passwordResetForm" *ngIf="step_one">
       
       <div *ngIf="passResetSubmitted && g.spotbie_email_or_ph.errors else spotbie_reset_1_normal" class="spotbie-invalid-feedback animated shake"> 
 
         <div *ngIf="g.spotbie_email_or_ph.errors.maxlength">
-            Phone number or e-mail can only be 130 characters in length.
+          E-mail can only be 130 characters in length.
         </div>
 
         <div *ngIf="g.spotbie_email_or_ph.errors.required">
-          Please enter your phone number or e-mail.
+          Please enter your or e-mail.
         </div>
 
       </div> 
 
       <ng-template #spotbie_reset_1_normal>
 
-        <div #getLinkMessage class="spotbie-toast-info spotbie-contact-me-info">
+        <div #getLinkMessage class="spotbie-text-gradient spotbie-contact-me-info">
           {{ email_or_ph_error }}
         </div>
 
@@ -44,9 +37,9 @@
       <input class="sb-input"
             formControlName="spotbie_email_or_ph" 
             type="text" 
-            placeholder="Phone Number or E-Mail"/>
+            placeholder="E-Mail"/>
 
-      <button class="spotbie-button spotbie-padding spotbie-margin" (click)="setPassResetPin()">
+      <button class="spotbie-button spotbie-padding text-uppercase mt-5" (click)="setPassResetPin()">
         Send Reset Link
       </button>
 
@@ -56,7 +49,7 @@
     
       <div>
 
-          <div class="spotbie-toast-info spotbie-contact-me-info">
+          <div class="spotbie-text-gradient spotbie-contact-me-info">
             {{ pin_ready_msg }}
           </div>
 
@@ -70,7 +63,7 @@
 
         <tr>
             <td>
-                <div *ngIf="password_submitted && h.spotbieResetPassword.errors else spotbie_password_normal" class="spotbie-invalid-feedback animated shake">
+                <div *ngIf="password_submitted && h.spotbieResetPassword.errors else spotbie_password_normal" class="spotbie-text-gradient spotbie-error mb-2">
       
                   <div *ngIf="h.spotbieResetPassword.errors.required">
                       Enter a new password.
@@ -81,24 +74,24 @@
                   </div> 
 
                   <div *ngIf="h.spotbieResetPassword.errors.oneLowerCase">
-                      Password must contain at least one lowercase letter (a-z)!
+                    Password must contain at least one lowercase letter (a-z)!
                   </div>  
 
                   <div *ngIf="h.spotbieResetPassword.errors.oneUpperCase">
-                      Password must contain at least one uppercase letter (A-Z)!
+                    Password must contain at least one uppercase letter (A-Z)!
                   </div>                       
 
                 </div>                       
 
                 <ng-template #spotbie_password_normal>
     
-                    <div class="spotbie-input-info" #spotbie_password_change_info_text>
+                    <label class="spotbie-text-gradient mb-2" #spotbie_password_change_info_text>
                         {{ new_password_msg }}
-                    </div>
+                    </label>
                     
                 </ng-template>       
 
-                <input class="sb-input" (click)="$event.target.select()" 
+                <input class="sb-input mb-4" (click)="$event.target.select()" 
                       formControlName="spotbieResetPassword" 
                       type="password" 
                       value="password"
@@ -112,7 +105,7 @@
 
             <td>
 
-              <div *ngIf="password_submitted && h.spotbieResetPasswordC.errors else spotbie_confirm_password_normal" class="spotbie-invalid-feedback animated shake">          
+              <div *ngIf="password_submitted && h.spotbieResetPasswordC.errors else spotbie_confirm_password_normal" class="spotbie-text-gradient spotbie-erro mb-2">          
         
                 <div *ngIf="h.spotbieResetPasswordC.errors.mustMatch">
                   Your passwords must match.
@@ -125,12 +118,12 @@
               </div> 
 
               <ng-template #spotbie_confirm_password_normal>
-                  <div class="spotbie-input-info">
+                  <label class="spotbie-text-gradient mb-2">
                       Confirm your new password.
-                  </div>
+                  </label>
               </ng-template>
 
-              <input class="sb-input" (click)="$event.target.select()" 
+              <input class="sb-input mb-4" (click)="$event.target.select()" 
                       formControlName="spotbieResetPasswordC" 
                       type="password" 
                       value="newpassword" 
@@ -142,7 +135,7 @@
         </tr>
 
         <tr>
-            <td class='spotbie-button' (click)="completeSavePassword()">
+            <td class='spotbie-button text-uppercase' (click)="completeSavePassword()">
                 Save New Password
             </td>
         </tr>
@@ -152,15 +145,17 @@
 
     </form>
 
-    <p class="spotbie-el-100
-              spotbie-rel-div
-              spotbie-paragraph
-              spotbie-success-pass" *ngIf="step_four">
+    <div class="mt-5 mb-5" *ngIf="step_four">
     
-      Password changed.<br/>
-      You may now log-in.
-    
-    </p>  
+      <p class="spotbie-text-gradient">
+        Password changed.
+      </p>
+      <br/><br/>
+      <span class="spotbie-text-gradient cursor-pointer" (click)="goHome()">
+        You may now log-in.
+      </span>
+
+  </div>  
   
   </div>
 
