--- a/src/app/spotbie/spotbie-logged-in/user-dashboard/user-dashboard.component.html
+++ b/src/app/spotbie/spotbie-logged-in/user-dashboard/user-dashboard.component.html
@@ -7,15 +7,18 @@
         <h6 class='sb-text-light-green-gradient mb-3'>GET WHAT YOU WANT</h6>
 
         <div class='sb-optionGet' (click)="spawnCategories('food')">
-            <img src="assets/images/home_imgs/find-places-to-eat.svg" />
+            <img src="assets/images/home_imgs/find-places-to-eat.svg" /><br/>
+            <span class='spotbie-text-gradient'>FOOD</span>
         </div>
 
         <div class='sb-optionGet' (click)="spawnCategories('events')">
-            <img src="assets/images/home_imgs/find-events.svg" />
+            <img src="assets/images/home_imgs/find-events.svg" /><br/>
+            <span class='spotbie-text-gradient'>EVENTS</span>
         </div>  
 
         <div class='sb-optionGet' (click)="spawnCategories('shopping')">
-            <img src="assets/images/home_imgs/find-places-for-shopping.svg" />
+            <img src="assets/images/home_imgs/find-places-for-shopping.svg" /><br/>
+            <span class='spotbie-text-gradient'>RETAIL</span>
         </div>                        
 
     </div>
