--- a/src/app/spotbie/spotbie-logged-in/settings/settings.component.css
+++ b/src/app/spotbie/spotbie-logged-in/settings/settings.component.css
@@ -18,6 +18,10 @@
     background-size: cover;
     text-align: center;    
     z-index: 97;
+    background: url(src/assets/images/home_imgs/jpg/spotbie-miami-find-new-friends.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;    
 }
 .spotbie-select-menu{
     overflow-y: hidden !important;
@@ -36,7 +40,6 @@
     max-width: 950px;
     padding: 20px;
     border-radius: 20px;
-    border-bottom: 1px solid #535353;
 }
 .spotbie-place-result td{
     padding: unset;
