--- a/src/app/spotbie/features/user-features/user-features.component.html
+++ b/src/app/spotbie/features/user-features/user-features.component.html
@@ -11,16 +11,19 @@
 
 <h4 class="text-uppercase">SPOTBIE COMMUNITY</h4>
 
-<p>    
-
-    Welcome to the SpotBie community. 
+<p class="text-center">    
     
-    Gain <b>loyalty points</b> from nearby <a class="spotbie-text-link" [routerLink]="['/business']">SpotBie Community Members.</a> 
-
+    <a class="spotbie-text-link" [routerLink]="['/earn-loyalty-points']">Earn Loyalty Points</a>
+    <br/>
+    
+    from nearby
+    
+    <br/>
+    <a class="spotbie-text-link" [routerLink]="['/business']">SpotBie Community Members</a> 
+    
+    <br/><br/>
     Find places to eat, shopping, and events around you. 
-    
-    
-    
+    <br/><br/>
     Rewards include discounts, drinks & food, exclusive event merchandise, and more.
 
 </p>
