Nov 5 Home Page Text Fix

--- a/src/app/spotbie/features/user-features/user-features.component.html
+++ b/src/app/spotbie/features/user-features/user-features.component.html
@@ -12,20 +12,22 @@
 <h4 class="text-uppercase">SPOTBIE COMMUNITY</h4>
 
 <p class="text-center">    
-    
+
+    <br/><br/>
     <a class="spotbie-text-link" [routerLink]="['/earn-loyalty-points']">Earn Loyalty Points</a>
-    <br/>
+    <br/><br/>
     
-    from nearby
+    <span class="text-uppercase">from nearby</span>
     
-    <br/>
+    <br/><br/>
     <a class="spotbie-text-link" [routerLink]="['/business']">SpotBie Community Members</a> 
     
+    <br/><br/><br/><br/>
+    Places to Eat, Shopping, and Events around you.
     <br/><br/>
-    Find places to eat, shopping, and events around you. 
-    <br/><br/>
-    Rewards include discounts, drinks & food, exclusive event merchandise, and more.
-
+    Discounts, drinks & food, exclusive event merchandise, and more rewards.
+    <br/><br/><br/><br/>
+    
 </p>
 
 <div class="sb-homePageIconsTable mt-4 mb-4">
