--- a/src/app/spotbie/features/user-features/user-features.component.html
+++ b/src/app/spotbie/features/user-features/user-features.component.html
@@ -13,7 +13,7 @@
 
 <p class="text-center">    
 
-    <br/><br/>
+    <br/>
     <a class="spotbie-text-link" [routerLink]="['/earn-loyalty-points']">Earn Loyalty Points</a>
     <br/><br/>
     
@@ -22,12 +22,12 @@
     <br/><br/>
     <a class="spotbie-text-link" [routerLink]="['/business']">SpotBie Community Members</a> 
     
-    <br/><br/><br/><br/>
-    Places to Eat, Shopping, and Events around you.
+    <br/><br/>
+    <span class="text-uppercase">Food, Shopping, and Events</span>
     <br/><br/>
     Discounts, drinks & food, exclusive event merchandise, and more rewards.
-    <br/><br/><br/><br/>
-    
+    <br/><br/><br/>
+
 </p>
 
 <div class="sb-homePageIconsTable mt-4 mb-4">
