--- a/src/app/spotbie/ads/header-ad-banner/header-ad-banner.component.css
+++ b/src/app/spotbie/ads/header-ad-banner/header-ad-banner.component.css
@@ -3,13 +3,13 @@
     right: 4%;
     text-align: center;
     margin: 5px auto;
-    min-height: 281px;
+    min-height: 370px;
     background-repeat: no-repeat!important;
     background-size: contain!important;
     background-position: center!important;
-    max-width: 74%;
-    min-width: 74%;
-    width: 74%;
+    max-width: 1200px;
+    min-width: 1200px;
+    width: 1200px;
     background-color: #1c1924!important;
     cursor: pointer;
     z-index: 9;
@@ -24,9 +24,9 @@
     left: 0;
     right: 0;
     margin-left: 0;
-    min-height: 89%;
-    height: 89%;
-    max-height: 89%;
+    min-height: 100%;
+    height: 100%;
+    max-height: 100%;
     width: 100%;
     max-width: 100%;
     min-width: 100%;
@@ -66,7 +66,6 @@
     left: 0;
     width: 100%;
     z-index: 2;
-    background-color: #332f3e;
     padding-top: 5px;
     padding-bottom: 5px;
     font-size: .6rem;
