--- a/src/app/spotbie/map/map.component.css
+++ b/src/app/spotbie/map/map.component.css
@@ -200,6 +200,7 @@
     margin-top: 0;
     margin-bottom: 0;
     padding: 10px;
+    padding-top: 40px;
     text-align: left;
     background-color: transparent;
     font-size: .8rem;
