--- a/src/app/spotbie/spotbie-logged-in/ad-manager-menu/ad-creator/ad-creator.component.html
+++ b/src/app/spotbie/spotbie-logged-in/ad-manager-menu/ad-creator/ad-creator.component.html
@@ -142,7 +142,7 @@
                     accept="image/jpeg, image/gif, image/png"
                     multiple=false />
 
-            <div (click)="startAdMediaUploader()" class='cursor-pointer'>
+            <div (click)="startAdMediaUploader()" class='cursor-pointer mb-5'>
 
                 <app-header-ad-banner #adApp class="pe-none" *ngIf="adType == 0" [ad]="ad" [business]="business" [editMode]="true"></app-header-ad-banner>
                 <app-nearby-featured-ad #adApp class="pe-none" *ngIf="adType == 1" [ad]="ad" [business]="business" [editMode]="true"></app-nearby-featured-ad>
@@ -150,7 +150,12 @@
             
             </div> 
 
-            <h6 class='sb-text-light-green-gradient mt-2'>SPOTBIE AD PREVIEW</h6>
+            <h6 class='sb-text-light-green-gradient'>SPOTBIE AD PREVIEW</h6>
+
+            <p>
+                <i class="fa fa-map-marker-alt"></i>
+                <span class="spotbie-text-gradient">ADS ARE DISPLAYED TO LOCAL USERS WITHIN A 10 MILE RADIUS</span>
+            </p>
 
         </form>
 
