--- a/src/app/spotbie/ads/header-ad-banner/header-ad-banner.component.html
+++ b/src/app/spotbie/ads/header-ad-banner/header-ad-banner.component.html
@@ -3,6 +3,8 @@
     [ngStyle]="getAdStyle()"
     (click)="openAd()">
 
+    <div class="spotbie-white-iconImg" [ngStyle]="{'background' : 'url(assets/images/qr/spotbie-white-icon.png)'}"></div>
+
     <div class="spotbie-ad-image" [ngStyle]="{'background' : 'url(' + ad.images + ')'}"></div>
     
     <div class='sb-ad-bottom'>
