--- a/src/app/spotbie/spotbie-logged-in/qr/qr.component.html
+++ b/src/app/spotbie/spotbie-logged-in/qr/qr.component.html
@@ -39,7 +39,7 @@
         </form>
 
         <div class='spotbie-button text-uppercase mt-4' (click)="startAwardProcess()">
-            AWARD<span><i class="fas fa-hamburger"></i></span>
+            AWARD
         </div>        
 
     </div>
