--- a/src/app/spotbie/ads/bottom-ad-banner/bottom-ad-banner.component.css
+++ b/src/app/spotbie/ads/bottom-ad-banner/bottom-ad-banner.component.css
@@ -68,6 +68,7 @@
     padding-top: 5px;
     padding-bottom: 5px;
     font-size: .6rem;
+    background-color: rgba(0,0,0,.729);    
 }
 
 @media (max-width: 1100px) { 
