--- a/src/app/spotbie/spotbie-logged-in/menu-logged-in.component.html
+++ b/src/app/spotbie/spotbie-logged-in/menu-logged-in.component.html
@@ -15,17 +15,17 @@
 
       <span class='sb-loyalty-points' (click)="toggleLoyaltyPoints()" >{{ userLoyaltyPoints | number:'1.0':'en-US' }}</span>
       
-      <img class='sb-loyalty-points' *ngIf="!isMobile" (click)="toggleRedeemables()"  src="assets/images/spotbie-loyalty-points.svg" />
+      <img class='sb-loyalty-points' *ngIf="!isMobile" (click)="toggleLoyaltyPoints()"  src="assets/images/spotbie-loyalty-points.svg" />
 
       <div class="sb-businessMenu" *ngIf="isMobile">
-        <img class='sb-loyalty-points' (click)="toggleRedeemables()" src="assets/images/spotbie-loyalty-points.svg" />
+        <img class='sb-loyalty-points' (click)="toggleLoyaltyPoints()" src="assets/images/spotbie-loyalty-points.svg" />
       </div>
 
-      <div *ngIf="this.userType == '1' || this.userType == '2' || this.userType == '3'" class="sb-businessMenu" (click)="toggleRewardMenu()">
+      <div *ngIf="this.userType == '1' || this.userType == '2' || this.userType == '3'" class="sb-businessMenu" (click)="toggleRedeemables()">
         <img class='sb-loyalty-points' src="assets/images/menu spotbie-01.svg" />
       </div>
 
-      <div *ngIf="this.userType == '4'" class="sb-businessMenu" (click)="toggleRewardMenu()">
+      <div *ngIf="this.userType == '4'" class="sb-businessMenu" (click)="toggleRedeemables()">
         <img class='sb-loyalty-points' src="assets/images/menu spotbie-01.svg" />
       </div>
 
