--- a/src/app/spotbie/spotbie-logged-in/ad-manager-menu/ad-creator/ad-creator.component.html
+++ b/src/app/spotbie/spotbie-logged-in/ad-manager-menu/ad-creator/ad-creator.component.html
@@ -152,7 +152,7 @@
 
             <h6 class='sb-text-light-green-gradient'>SPOTBIE AD PREVIEW</h6>
 
-            <p>
+            <p style="font-size: .8rem;">
                 <i class="fa fa-map-marker-alt"></i>
                 <span class="spotbie-text-gradient">ADS ARE DISPLAYED TO LOCAL USERS WITHIN A 10 MILE RADIUS</span>
             </p>
